# WebBell2

./: README.md  README.md.orig  package-lock.json  package.json
src/: empty.json  examList.json  index.html  new_format.json  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/exam_countdown/: exam_countdown.html  exam_object.js  style.css
src/js/: audio.js  autoStart.js  color.js  easterEgg.js  func.js  index.js  indexBeta.js  newEditor.js  newEditorBeta.js  peaks.js  tabs.js  timeSet.js  timeSetBeta.js  timepoint-selection.var.js  updater.js  web.js  worker.js
